fixed the skills section alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,14 @@ p {
   text-align: left;
 }
 
+.gaming-disc {
+  margin-bottom: auto;
+}
+
+.admin-disc {
+  margin-bottom: 150px;
+}
+
 .middle-container {
   margin: 100px 0;
 }
@@ -118,13 +126,13 @@ p {
 }
 
 .admin-img {
-  width: 200px;
+  width: 150px;
   float: left;
   margin: 0 30px 0 0;
 }
 
 .game-img {
-  width: 200px;
+  width: 150px;
   float: right;
   margin-left: 30px;
 }
